[project]
name = "ansmetheus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "croniter>=6.0.0",
    "paramiko>=4.0.0",
    "psutil>=7.1.3",
    "pyqt6>=6.10.0",
    "pyqt6-charts>=6.10.0",
    "pyqtgraph>=0.13.7",
    "pyyaml>=6.0.3",
]
